--- a/html_main.html
+++ b/html_main.html
@@ -9,11 +9,11 @@
     </style>
   </head>
   <body>
-    <h3>My Google Maps Demo</h3>
+    <h3>Emergency Dashboard</h3>
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: -25.363, lng: 131.044};
+        var uluru = {lat: 25.739721, lng: -80.232208};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 4,
           center: uluru
