--- a/html_main.html
+++ b/html_main.html
@@ -30,12 +30,12 @@
     
     /* Fetch any embeddable Twitter object from the OEmbed API */
 
-let oembedResponse = await fetch(new Request('https://publish.twitter.com/oembed?url=https://twitter.com/jack/status/20'));
+let oembedResponse = await fetch(new Request('https://twitter.com/KongenDin/status/932958213816844288'));
 let oembedTweet = oembedResponse.json();
     
     {
-  "url": "https://twitter.com/jack/status/20",
-  "author_name": "jack",
+  "url": "https://twitter.com/KongenDin/status/932958213816844288",
+  "author_name": "Kongen",
   "author_url": "https://twitter.com/jack",
   "html": "<blockquote class=\"twitter-tweet\"><p lang=\"en\" dir=\"ltr\">just setting up my twttr</p>&mdash; jack (@jack) <a href=\"https://twitter.com/jack/status/20\">March 21, 2006</a></blockquote>\n<script async src=\"//platform.twitter.com/widgets.js\" charset=\"utf-8\"></script>",
   "width": 550,
