--- a/html_main.html
+++ b/html_main.html
@@ -29,7 +29,7 @@
     </script>
     
     <script>
-    let oembedResponse = await fetch(new Request('https://twitter.com/KongenDin/status/932958213816844288'));
+    let oembedResponse = await fetch(new Request('https://publish.twitter.com/oembed?url=https://twitter.com/jack/status/20'));
 let oembedTweet = oembedResponse.json();
     </script>
     
