--- a/html_main.html
+++ b/html_main.html
@@ -35,6 +35,15 @@ let oembedTweet = oembedResponse.json();
     
     <blockquote class="twitter-tweet" data-lang="en"><p lang="no" dir="ltr">black friday er faktisk oppkalt etter forbrukssamfunnets kullsorte samvittighet.</p>&mdash; Harald Rex (@KongenDin) <a href="https://twitter.com/KongenDin/status/932958213816844288?ref_src=twsrc%5Etfw">November 21, 2017</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 
+    <script>
+      twttr.widgets.createTimeline(
+  "600756918018179072",
+  document.getElementById("container"),
+  {
+    height: 400
+  }
+);
+    </script>
     
   </body>
 </html>
