--- a/html_main.html
+++ b/html_main.html
@@ -7,6 +7,7 @@
   <body>
     <img src="nodsiktlogo.png" alt="nodsiktlogo" id="logo">
     <div id="map"></div>
+    <div id="myMap" class="gmap"></div>
 
     <!-- Google Maps API -->
     <script>
