--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		
 		<script>
 		var myMap = $('#myMap').tweetMap({
-			q: '#newyork',
-			latitude: '40.714353',
-			longitude: '-74.005973',
+			q: '#bergen',
+			latitude: '60.392069',
+			longitude: '5.311952',
 			zoom: 12,
 			geocode: '40.714353, -74.005973, 1mi'
 		});
