--- a/html_main.html
+++ b/html_main.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <!-- <link rel="stylesheet" href="StyleNodSikt.css"> -->
-    <link rel="stylesheet" href="tweetmap/tweetMap-1.1.0.min.css">
+    <link rel="stylesheet" href="tweetMap-1.1.0.min.css">
   </head>
   <body>
     <img src="nodsiktlogo.png" alt="nodsiktlogo" id="logo">
