--- a/html_main.html
+++ b/html_main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <!-- <link rel="stylesheet" href="StyleNodSikt.css"> -->
+    <link rel="stylesheet" href="StyleNodSikt.css">
     <link rel="stylesheet" href="tweetMap-1.1.0.min.css">
   </head>
   <body>
