--- a/html_main.html
+++ b/html_main.html
@@ -46,7 +46,7 @@
       if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
        fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
     <script>
-      document.getElementById("demo").innerHTML = 5+6;
+      document.getElementById("demo").innerHTML = p;
     </script>
     
   </body>
