--- a/html_main.html
+++ b/html_main.html
@@ -45,9 +45,11 @@
       if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
        fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
   
-    
-    <!-- oda tull -->
-    <iframe src="http://tweetedtrips.com/embed/972/hei/" width="600" height="400" frameborder="0"></iframe>
+  {
+   "place": {
+    "name": "Spalding"
+    }
+}
     
   </body>
 </html>
