--- a/html_main.html
+++ b/html_main.html
@@ -38,13 +38,15 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA0dGtTV1OBl7AlJHN1emgGKKvlCKUDq1A&callback=initMap">
     </script>
     
-    <!-- Twitter API -->
+    <!-- Twitter API 
  
  <a class="twitter-timeline" href="https://twitter.com/hashtag/flood" data-widget-id="933313029621583872">#flood Tweets</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';
       if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";
        fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-  
+ 
+-->
+    
     <!-- 
   {
    "place": {
