--- a/html_main.html
+++ b/html_main.html
@@ -22,7 +22,7 @@
         });
         var marker = new google.maps.Marker({ position: markerOne,
         map: map,
-        icon: 'twitterposition.png'
+        icon: 'bris.png'
         });
         
        //Funker ikke
