--- a/html_main.html
+++ b/html_main.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="StyleNodSikt.css">
   </head>
   <body>
-    <img src="nodsiktlogo.png" alt="nodsiktlogo" id="logo">
+    <img src="bris.png" alt="bris" id="logo">
     <div id="map"></div>
 
     <!-- Google Maps API -->
@@ -22,7 +22,7 @@
         });
         var marker = new google.maps.Marker({ position: markerOne,
         map: map,
-        icon: 'bris.png'
+        icon: 'twitterposition.png'
         });
         
        //Funker ikke
