--- a/html_main.html
+++ b/html_main.html
@@ -18,11 +18,11 @@
         var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
-          icon: 'twitterposition.png'
+          //icon: 'twitterposition.png'
         });
         var marker = new google.maps.Marker({ position: markerOne,
         map: map,
-        icon: 'twitterposition.png'
+        //icon: 'twitterposition.png'
         });
         
     var contentString = '<div id="content">'+
