--- a/html_main.html
+++ b/html_main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title> TheBrisBot </title>
     <link rel="stylesheet" href="StyleNodSikt.css">
   </head>
   <body>
