--- a/html_main.html
+++ b/html_main.html
@@ -55,6 +55,7 @@
          var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
+          icon: 'twitterposition.png',
           title: 'markerTwo (Ayers Rock)'
         });
         marker.addListener('click', function() {
@@ -111,7 +112,7 @@ function initialize() {
     
 
     
-  <!-- 
+  <!-- Funker, men ikke kordinatene
     <iframe id="forecast_embed" frameborder="0" height="245" width="100%" 
      src="//forecast.io/embed/#lat=5.32415=-60.39299&name=Bergen&color=#00aced&font=Georgia&units=ca"></iframe>
      -->    
