--- a/html_main.html
+++ b/html_main.html
@@ -22,6 +22,7 @@
         });
         var marker = new google.maps.Marker({ position: markerOne,
         map: map,
+        title: 'Trykk her for å se tweet'                                    
         //icon: 'twitterposition.png'
         });
         
