--- a/html_main.html
+++ b/html_main.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" href="StyleNodSikt.css">
+    <title>TheBrisBot</title>
   </head>
   <body>
     <img src="bris.png" alt="bris" id="logo">
@@ -18,6 +19,7 @@
         var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
+          title: 'Trykk her for å se tweeten'
           //icon: 'twitterposition.png'
         });
         var marker = new google.maps.Marker({ position: markerOne,
