--- a/html_main.html
+++ b/html_main.html
@@ -56,7 +56,7 @@
           position: markerTwo,
           map: map,
           icon: 'twitterposition.png'
-          title: 'markerTwo (Ayers Rock)'
+          title: 'Trykk her for å se tweeten'
         });
         marker.addListener('click', function() {
           infowindow.open(map, marker);
