--- a/html_main.html
+++ b/html_main.html
@@ -19,13 +19,11 @@
         var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
-          title: 'Trykk her for å se tweeten'
-          icon: 'twitterposition.png'
+          //icon: 'twitterposition.png'
         });
         var marker = new google.maps.Marker({ position: markerOne,
         map: map,
-        title: 'Trykk her for å se tweeten'
-        icon: 'twitterposition.png'
+        //icon: 'twitterposition.png'
         });
         
     var contentString = '<div id="content">'+
@@ -55,7 +53,7 @@
          var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
-          icon: 'twitterposition.png'
+          icon: 'twitterposition.png',
           title: 'Trykk her for å se tweeten'
         });
         marker.addListener('click', function() {
