--- a/html_main.html
+++ b/html_main.html
@@ -53,8 +53,8 @@
          var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
-          icon: 'twitterposition.png',
-          title: 'Trykk her for å se tweeten'
+          // icon: 'twitterposition.png',
+          title: 'Trykk her for a se tweeten'
         });
         marker.addListener('click', function() {
           infowindow.open(map, marker);
