--- a/html_main.html
+++ b/html_main.html
@@ -61,7 +61,7 @@
     
     <!-- Værdata -->
     <iframe id="forecast_embed" frameborder="0" height="245" width="30%" 
-            src="//forecast.io/embed/#lat=60.39299&lon=5.32415&name=Bergen&color=#00aaff&font=Georgia&units=uk"></iframe>
+            src="//forecast.io/embed/#lat=60.39299&lon=5.32415&name=Bergen&color=#00aaff&font=Georgia&units=ca"></iframe>
   
   </body>
 </html>
