--- a/html_main.html
+++ b/html_main.html
@@ -60,6 +60,7 @@
     
     
     <!-- Værdata -->
+    <div id="">
     <iframe id="forecast_embed" frameborder="0" height="245" width="30%" 
             src="//forecast.io/embed/#lat=60.39299&lon=5.32415&name=Bergen&color=#00aaff&font=Georgia&units=ca"></iframe>
   
