--- a/html_main.html
+++ b/html_main.html
@@ -13,9 +13,11 @@
       function initMap() {
         var markerOne = {lat: 60.41768 , lng: 5.47087};
         var markerTwo = {lat: 60.392069 , lng: 5.311952};
+        var markerThree = {lat: 60.1839 , lng: 5.4638};
         var map = new google.maps.Map(document.getElementById('map'), {
           zoom: 10,
           center: markerTwo});
+        
         var marker = new google.maps.Marker({
           position: markerTwo,
           map: map,
