--- a/html_main.html
+++ b/html_main.html
@@ -27,6 +27,10 @@
         map: map,
         //icon: 'twitterposition.png'
         });
+         var marker = new google.maps.Marker({ position: markerThree,
+        map: map,
+        //icon: 'twitterposition.png'
+        });
         
     var contentString = '<div id="content">'+
             '<div id="siteNotice">'+
