--- a/html_main.html
+++ b/html_main.html
@@ -57,15 +57,15 @@
           infowindow.open(map, marker);
         });
         
-         var marker = new google.maps.Marker({
+         var marker2 = new google.maps.Marker({
           position: markerThree,
           map: map,
           // icon: 'twitterposition.png',
           title: 'Trykk her for a se tweeten'
         }); 
         
-          marker.addListener('click', function() {
-          infowindow.open(map, marker);
+          marker2.addListener('click', function() {
+          infowindow.open(map, marker2);
         });
       }
    
